--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mini-css-extract-plugin": "^1.6.0",
     "popper.js": "^1.16.1",
     "sass": "^1.34.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "10.1.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
